--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.7",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/geolocation": "^3.4.0",
+    "axios": "^1.7.7",
+    "expo": "^52.0.7",
+    "expo-blur": "^14.0.1",
+    "expo-constants": "^17.0.3",
+    "expo-location": "^18.0.1",
+    "expo-notifications": "^0.29.8",
     "expo-status-bar": "~2.0.0",
+    "install": "^0.13.0",
+    "npm": "^10.9.0",
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-native": "0.76.2",
+    "react-native-animatable": "^1.4.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
